--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -1,3 +1,7 @@
+#header-wrapper{
+  background-color: rgb(238, 238, 238);
+  border-bottom: 1px solid rgb(225, 225, 225);
+}
 .header {
     z-index: 0;
     width: 1024px;
