--- a/src/styles/printing.less
+++ b/src/styles/printing.less
@@ -3,19 +3,18 @@ body{
   font-family: "Microsoft YaHei";
   background: rgba(153,153,153,.09999999999999998);
 }
-#header-wrapper{
-  background-color: rgb(238, 238, 238);
-  border-bottom: 1px solid rgb(225, 225, 225);
-}
-#printing{
+#con{
   font-size:18px;
   color:#666;
-  background: url(../images/bg.png);
-  border-bottom: 1px solid rgb(225, 225, 225);
+  #main-wrapper {
+    background: url(../images/bg.png);
+    border-bottom: 1px solid rgb(225, 225, 225);
+  }
   .main{
     width:1024px;
     margin:auto;
     padding-top: 60px;
+    
     span{
       padding: .1em 0;
     }
