--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -25,7 +25,7 @@
         line-height: 2em;
         vertical-align: middle;
         font-family: "PT_sans";
-        .index {
+        .lo {
             position: relative;
             z-index: 2;
             font-size: 30px;
