--- a/src/styles/printing.less
+++ b/src/styles/printing.less
@@ -26,14 +26,13 @@ body{
     filter: alpha(opacity=100);
     overflow: visible;
     line-height: 1.3em;
-    font-family: "Ubuntu Mono",monospace;
     white-space: -moz-pre-wrap!important;
     white-space: -pre-wrap;
     white-space: -o-pre-wrap;
     word-wrap: break-word;
     span {
         padding: .1em 0;
-        .return {
+        &.return {
             visibility: hidden;
             outline: none!important;
             background-color:#fff!important;
@@ -54,6 +53,10 @@ body{
           color:#38cf1a;
             -webkit-animation:bottom_flash 0.8s infinite linear;
         }
+        &.incorrect{
+          visibility: visible;
+          color: #e63d3d;
+        }
     }
     .c {
         color: #ccc!important;
@@ -66,13 +69,20 @@ body{
         color:#737373;
         
     }
-    .pageing{
-       margin: 50px 0;
-       span{
-        margin-right: 50px;
-        cursor: pointer;
-       }
+    .main-footer{
+      margin: 50px 0;
+      .pageing{
+        float: left;
+        span{
+          cursor: pointer;
+          margin-right: 20px;
+        }
+      }
+      .time{
+        float: right;
+      }
     }
+    
     input{
         background:transparent;
         border:none;
@@ -88,20 +98,8 @@ body{
       }
   }
   .time{
-    position:fixed;
-    right:5%;
-    bottom:5%;
-    font-size:24px;
     span{
       margin-left:20px;
-    }
-    a{
-      position: relative;
-        top: 2px;
-        display:inline-block;
-        width:30px;
-        height:30px;
-        color:#38cf1a;
     }
   }
 }
