--- a/src/styles/printing.less
+++ b/src/styles/printing.less
@@ -30,43 +30,129 @@ body{
     white-space: -pre-wrap;
     white-space: -o-pre-wrap;
     word-wrap: break-word;
-    span {
-        padding: .1em 0;
-        &.return {
-            visibility: hidden;
-            outline: none!important;
-            background-color:#fff!important;
-            &:before{
-              background-color: #ffc40d!important;
-              content: '\23CE';
-              color: #fff!important;
-              padding: 0 .5em;
-            }
-            &.char-active{
-              visibility: visible;
-            }
-            &.incorrect{
-              visibility: visible;
-            }
-        }
-        &.char-active {
-          color:#38cf1a;
-            -webkit-animation:bottom_flash 0.8s infinite linear;
-        }
-        &.incorrect{
-          visibility: visible;
-          color: #e63d3d;
-        }
+    .mheader{
+      width: 100%;
+      background: #ccd0d4;
+      overflow:hidden;
+      box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
+      .toggle {
+        position: relative;
+        height: 30px;
+        width: 30px;
+        margin: 4px;
+        display: inline-block;
+        /* box-shadow: inset 0 0 35px 5px rgba(0, 0, 0, 0.25), inset 0 2px 1px 1px rgba(255, 255, 255, 0.9), inset 0 -2px 1px 0 rgba(0, 0, 0, 0.25); */
+        /* border-radius: 8px; */
+        
+      }
+      .toggle:before {
+        box-shadow: 0 0 17.5px 8.75px white;
+        border-radius: 30px;
+        background: #eeeeee;
+        position: absolute;
+        margin-left: -12px;
+        margin-top: -12px;
+        opacity: 0.6;
+        content: "";
+        height: 24px;
+        width: 24px;
+        left: 50%;
+        top: 50%;
+      }
+      .toggle .button {
+        -webkit-filter: blur(1px);
+        -moz-filter: blur(1px);
+        filter: blur(1px);
+        transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+        box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.5), inset 0 -1px 1px 0px rgba(0, 0, 0, 0.2), 0 -2px 3px -0px rgba(255, 255, 255, 0.6), inset 0 1px 1px -0px rgba(255, 255, 255, 0.2), inset 0 0 1px 0px rgba(255, 255, 255, 0.8), inset 0 4px 6px 0 rgba(255, 255, 255, 0.2);
+        border-radius: 96.32px;
+        position: absolute;
+        background: #ccd0d4;
+        margin-left: -10px;
+        margin-top: -10px;
+        display: block;
+        height: 20px;
+        width: 20px;
+        left: 50%;
+        top: 50%;
+      }
+      .toggle .label {
+        transition: color 300ms ease-out;
+        text-shadow: 1px 1px 3px #ccd0d4, 0 0 0 rgba(0, 0, 0, 0.8), 1px 1px 4px white;
+        line-height: 30px;
+        text-align: center;
+        position: absolute;
+        font-size: 14px;
+        font-weight: 700;
+        display: block;
+        opacity: 0.9;
+        height: 100%;
+        width: 100%;
+        color: rgba(0, 0, 0, 0.4);
+      }
+      .toggle input {
+        opacity: 0;
+        position: absolute;
+        cursor: pointer;
+        z-index: 1;
+        height: 100%;
+        width: 100%;
+        left: 0;
+        top: 0;
+      }
+      .toggle input:active ~ .button {
+        box-shadow: 0 15px 25px -4px rgba(0, 0, 0, 0.4), inset 0 -8px 30px 1px rgba(255, 255, 255, 0.9), 0 -10px 15px -1px rgba(255, 255, 255, 0.6), inset 0 8px 25px 0 rgba(0, 0, 0, 0.4), inset 0 0 10px 1px rgba(255, 255, 255, 0.6);
+      }
+      .toggle input:active ~ .label {
+        color: rgba(0, 0, 0, 0.45);
+      }
+      .toggle input:checked ~ .button {
+        box-shadow: 0 15px 25px -4px rgba(0, 0, 0, 0.4), inset 0 -8px 25px -1px rgba(255, 255, 255, 0.9), 0 -10px 15px -1px rgba(255, 255, 255, 0.6), inset 0 8px 20px 0 rgba(0, 0, 0, 0.2), inset 0 0 5px 1px rgba(255, 255, 255, 0.6);
+      }
+      .toggle input:checked ~ .label {
+        color: rgba(0, 0, 0, 0.4);
+      }
     }
-    .c {
-        color: #ccc!important;
-    }
+    
     
     pre{
         display: block;
         font-family: 'Ubuntu Mono', monospace;
         white-space: pre;
         color:#737373;
+        background: #1b1717;
+        padding: 15px;
+        span {
+            padding: .1em 0;
+            &.return {
+                visibility: hidden;
+                outline: none!important;
+                background-color:#fff!important;
+                &:before{
+                  background-color: #ffc40d!important;
+                  content: '\23CE';
+                  color: #fff!important;
+                  padding: 0 .5em;
+                }
+                &.char-active{
+                  visibility: visible;
+                }
+                &.incorrect{
+                  visibility: visible;
+                }
+            }
+            &.char-active {
+              color:#38cf1a;
+                -webkit-animation:bottom_flash 0.8s infinite linear;
+            }
+            &.incorrect{
+              visibility: visible;
+              color: #e63d3d;
+            }
+        }
+        .c {
+            color: #ccc!important;
+        }
         
     }
     .main-footer{
@@ -97,8 +183,19 @@ body{
       }
   }
   .time{
+    position: absolute;
+    top: 40px;
+    right: 10px;
     span{
       margin-left:20px;
+      font-size: 14px;
+      cursor: pointer;
+      img{
+        width: 22px;
+        height: 22px;
+        position: relative;
+        top: 5px;
+      }
     }
   }
 }
